placeholder titles, update mdx

--- a/src/app/content/seattle/architects/arai.mdx
+++ b/src/app/content/seattle/architects/arai.mdx
@@ -1,5 +1,5 @@
 ---
-title: Kichio Allen Arai
+title: VVN TODO need title
 locationTitle: Seattle Betsuin Buddhist Temple
 address: 1427 South Main St, Seattle, WA 98144
 location: ["Seattle"] 
