--- a/src/app/content/seattle/architects/somervellAndThomas.mdx
+++ b/src/app/content/seattle/architects/somervellAndThomas.mdx
@@ -1,7 +1,7 @@
 ---
 title: How a fire built Seattle's libraries
 locationTitle: Columbia Branch Library
-address: 4721 Rainier Ave S, Seattle, WA 98118
+address: 4721 Rainier Ave S
 location: ["Seattle"] 
 latlon: [47.55992594007352, -122.28698055767136]
 neighborhood: Columbia City
