--- a/src/app/content/seattle/names/denny-regrade.mdx
+++ b/src/app/content/seattle/names/denny-regrade.mdx
@@ -1,6 +1,6 @@
 ---
 title: Why is Seattle so hilly?
-locationTitle: "Washington Hotel"
+locationTitle: Washington Hotel
 location: ["Seattle"]
 address: 233 1st Ave W
 neighborhood: "Belltown"
