--- a/src/app/content/seattle/names/joseprizal.mdx
+++ b/src/app/content/seattle/names/joseprizal.mdx
@@ -1,5 +1,6 @@
 ---
 title: The Most Beautiful View of Seattle
+locationTitle: Jose P Rizal Bridge
 location: ["Seattle"]
 latlon: [47.595096, -122.317290]
 zoom: 12
