--- a/src/app/content/seattle/names/mountBakerRidgeTunnel.mdx
+++ b/src/app/content/seattle/names/mountBakerRidgeTunnel.mdx
@@ -1,7 +1,7 @@
 ---
 title: The Greatest Bridge in Seattle
 locationTitle: East Portal Viewpoint
-address: 1400 Lake Washington Blvd S, Seattle, WA 98144
+address: 1400 Lake Washington Blvd S
 location: ["Seattle"] 
 latlon: [47.590423796334235, -122.28895222128534]
 neighborhood: Leschi
