--- a/src/app/content/seattle/architects/firestationNo18.mdx
+++ b/src/app/content/seattle/architects/firestationNo18.mdx
@@ -1,5 +1,5 @@
 ---
-title: Ballard's old firestation
+title: VVN TODO need title
 locationTitle: Firestation No. 18
 address: 5427 Russell Avenue Northwest
 location: ["Seattle"] 
