--- a/src/app/content/seattle/built/tugboatFoss.mdx
+++ b/src/app/content/seattle/built/tugboatFoss.mdx
@@ -1,7 +1,7 @@
 ---
 title: The Little Tugboat that Could
 locationTitle: Historic Ships Wharf
-address: 860 Terry Ave N, Seattle, WA 98109
+address: 860 Terry Ave N
 location: ["Seattle"]
 latlon: [47.62791651667464, -122.3367442465739]
 neighborhood: South Lake Union
