wy content, new content navbar, journal welcome

--- a/src/app/content/seattle/names/joseprizal.mdx
+++ b/src/app/content/seattle/names/joseprizal.mdx
@@ -5,15 +5,14 @@ location: ["Seattle"]
 latlon: [47.595096, -122.317290]
 zoom: 12
 tags: ["names"]
-locationTitle: Dr. Jose P Rizal Bridge
 address:
-neighborhood:
+neighborhood: Beacon Hill
 cardImage: "/loc/seattle-skyline.jpg"
 cameraImage: "/loc/seattle-skyline.jpg"
 stampName:
 photoPrompt:
 blurb:
-
+stickers:
 ---
 # Dr. Jose P Rizal Bridge
 
