--- a/src/app/content/sewy/knight.mdx
+++ b/src/app/content/sewy/knight.mdx
@@ -14,4 +14,29 @@ photoPrompt:
 blurb:
 ---
 
+
+Dr. Samuel H. Knight was a professor of geology at the University of Wyoming, and his name is attached to so many things -- the geology building itself, the science camp named after his honor in the Medicine Bow Mountains, and even a fossil.
+
+Doc Knight came from a family of geologists - his father was also a professor at the university, and the state fossil of Wyoming was named after him, the Knightia, a freshwater fish that is the most commonly found fish fossil in the world.
+[LC ITEM]
+
+Known for his exciting lectures on geology, where he could draw both detailed diagrams on the chalkboards of geologic formations and a perfect circle.
+
+[COMIC] Teaching inside. And you can see here, how the lava flows created this wavy..
+Looks outside....well, why don’t we just go see it??
+
+He established the Wyoming Science Camp in 1925, a place where students could learn geologic field methods, as well as matters of botany and zoology, amidst the subject itself.
+
+[COMIC] Blackboard in the middle of nature
+Knight: It’s so great to be out here in Wyoming -- the rock formations are all exposed and easy to see (whereas in the east coast they’re covered by plants)
+Knight: we have examples of all three kinds of rocks,
+And behind me you can even SEE an example of a glacial valley!
+Why would you ever want to learn not here??
+
+one guy, sweating buckets....I can think of one reason
+
+Eventually, the camp grew from tents to cabins, which Knight designed and built with the help of five students. To transport things to the camp, they got eleven Franklin cars, which they painted bright yellow with a dinosaur logo. Lecturers and students would come across the country to learn at the camp.
+
 <LOCItem caption="Classroom Building from east" alt="black and white photograph of log building" image="/loc/sewy/knight/classroom.png" linkOut="https://www.loc.gov/resource/hhh.wy0048.photos/?sp=13"/>
+
+Knight was an ardent educator - in his time, it is estimated that he taught over 13,000 students. And he was disappointed with the amount of fossils that would be extracted from Wyoming and sent out of the state -- so he acquired the Brontosaurus fossils and assembled it for the museum. After his retirement, he kept working, and taught himself metalwork to construct the lifesize T-Rex out of copper plates that sit outside the building named after him.
