update map on prev/next story

--- a/src/app/content/seattle/architects/firestationNo18.mdx
+++ b/src/app/content/seattle/architects/firestationNo18.mdx
@@ -1,6 +1,6 @@
 ---
 title: VVN TODO need title
-locationTitle: Firestation No. 18
+locationTitle: Fire Station No. 18
 address: 5427 Russell Avenue Northwest
 location: ["Seattle"] 
 latlon: [47.66825789609244, -122.38310310394768]
@@ -23,7 +23,7 @@ But the new town was missing one critical piece -- access to fresh water. Sittin
 
 <LOCItem image="/loc/seattle/firestationNo18/ballard.png" linkOut="https://www.loc.gov/resource/sn87093407/1907-02-06/ed-1/?sp=1&q=ballard+annexation&r=0.604,0.48,0.518,0.358,0" caption="Citizens of Ballard were not happy with the decision. On the day they merged, the flag was flown at half mast."/>
 
-In 1910, Seattle replaced the wooden firestation with the red brick building that still stands today. The architects for the new structure were Bebb & Mendel, who also designed the University Heights Elementary School and the Oriental Building in Downtown Seattle. Bebb later went on to design the Seattle Asian Art Museum (known at the time as the Art Institute of Seattle).
+In 1910, Seattle replaced the wooden fire station with the red brick building that still stands today. The architects for the new structure were Bebb & Mendel, who also designed the University Heights Elementary School and the Oriental Building in Downtown Seattle. Bebb later went on to design the Seattle Asian Art Museum (known at the time as the Art Institute of Seattle).
 
 At the time, fire engines were powered by horses, so the area at the back of the station contained horse stalls.
 
@@ -50,7 +50,7 @@ Luckily, Seattle had the Fireboat Duwamish as part of its firefighting fleet. It
 
 <LOCItem image="/loc/seattle/firestationNo18/fireboat.png" linkout="https://www.loc.gov/resource/hhh.wa0746.photos/?sp=1" caption="The Fireboat Duwamish is the 'best preserved' example of an early twentieth centure fireboat. It can be seen docked at the Historic Ships Wharf in Lake Union Park." alt=""/>
 
-The Ballard Firehouse still stands today, even though it’s no longer used as a firestation. It’s one of the few structures remaining from historic Ballard - others are the Ballard Bridge, the Ballard Locks, and the Carnegie Library.
+The Ballard Firehouse still stands today, even though it’s no longer used as a fire station. It’s one of the few structures remaining from historic Ballard - others are the Ballard Bridge, the Ballard Locks, and the Carnegie Library.
 
 {/* 
 Sticker template: 
