menu design adjust

--- a/src/app/content/seattle/architects/cunninghamHall.mdx
+++ b/src/app/content/seattle/architects/cunninghamHall.mdx
@@ -1,7 +1,7 @@
 ---
 title: Cunningham Hall Takes a Walk
 locationTitle: Alene Moris Women's Center
-address: 4101 George Washington Lane Northeast, Seattle, WA 98105
+address: 4101 George Washington Lane Northeast
 location: ["Seattle"] 
 latlon: [47.65724328614031, -122.31104686037378]
 neighborhood: "University District"
