remove test page

--- a/src/app/content/test.mdx
+++ b/src/app/content/test.mdx
@@ -2,7 +2,7 @@
 title: Vivian Test
 locationTitle: Vivian Test
 address: 1234 5th Ave
-location: [""]
+location: ["Seattle"]
 latlon: [47.557185959992886, -122.31920796314938]
 neighborhood: Beacon Hill
 zoom: 15
