new notif system

--- a/src/app/content/seattle/built/tugboatFoss.mdx
+++ b/src/app/content/seattle/built/tugboatFoss.mdx
@@ -20,7 +20,7 @@ Historic buildings can be seen all around the world, but Seattle is special beca
 
 
 The oldest lightship:
-<LOCItem linkOut="https://www.loc.gov/resource/cph.3b19268/" image="/loc/seattle/tugboatFoss/lightboat.jpg" caption="Lightships were used as floating lighthouses" alt="photo of lightship"/>
+<LOCItem type="pnp" linkOut="https://www.loc.gov/resource/cph.3b19268/" image="/loc/seattle/tugboatFoss/lightboat.jpg" caption="Lightships were used as floating lighthouses" alt="photo of lightship"/>
 
 The (second) oldest fireboat:
 <LOCItem linkOut="https://www.loc.gov/resource/hhh.wa0746.photos/?sp=1" image="/loc/seattle/tugboatFoss/fireboatDuwamish.jpg" caption="Fireboat Duwamish" alt="colored photo of red fireboat"/>
