update montlake bridge image

--- a/src/app/content/seattle/built/montlakeBridge.mdx
+++ b/src/app/content/seattle/built/montlakeBridge.mdx
@@ -7,12 +7,12 @@ latlon: [47.64740913305527, -122.30456014763188]
 neighborhood: Montlake
 zoom: 15
 tags: ["built"]
-cameraImage: "/loc/seattle/montlakeBridge/doubleLeaf.png"
+cameraImage: "/loc/seattle/montlakeBridge/bridge.jpg"
 cardImage: "/loc/seattle/montlakeBridge/bascule.png"
 stampName:
 photoPrompt: You can walk over and under the bridge. What details do you notice? Can you spot the counterweights?
 blurb: Seattle is a city of hills, valleys, and waterways, with bridges connecting people together. The Montlake Bridge is unique in its engineering, as its design was to prevent the city from getting sued.
-stickers: [{image: "/loc/seattle/montlakeBridge/tower.png", linkOut: "https://www.loc.gov/resource/hhh.wa0441.sheet/?sp=3", title: "Diagram of Montlake Bridge control tower"},{image: "/loc/seattle/montlakeBridge/seattleMap.png", linkOut: "https://www.loc.gov/resource/hhh.wa0441.sheet/?sp=1", title: "Map of Montlake Bridge location"},{image: "/loc/seattle/montlakeBridge/montlakeBridge.png", linkOut: "https://www.loc.gov/resource/hhh.wa0441.sheet/?sp=1", title: "Title of engineering report"},{image: "/loc/seattle/montlakeBridge/bridgeDiagram.png", linkOut: "https://www.loc.gov/resource/hhh.wa0441.sheet/?sp=1", title: "Diagram of bridge from HAER report"}]
+stickers: [{image: "/loc/seattle/montlakeBridge/tower.png", linkOut: "https://www.loc.gov/resource/hhh.wa0441.sheet/?sp=3", title: "Diagram of Montlake Bridge control tower"},{image: "/loc/seattle/montlakeBridge/seattleMap.png", linkOut: "https://www.loc.gov/resource/hhh.wa0441.sheet/?sp=1", title: "Map of Montlake Bridge location"},{image: "/loc/seattle/montlakeBridge/montlakeBridge.png", linkOut: "https://www.loc.gov/resource/hhh.wa0441.sheet/?sp=1", title: "Title of engineering report"},{image: "/loc/seattle/montlakeBridge/bridgeDiagram.png", linkOut: "https://www.loc.gov/resource/hhh.wa0441.sheet/?sp=1", title: "Diagram of bridge from HAER report"}, {image: "/loc/seattle/montlakeBridge/protestors.png"}]
 ---
 
 The Lake Washington Ship Canal was built to create a navigable waterway from the Puget Sound to Lake Washington. 
