montlake bridge revisions

--- a/src/app/content/seattle/built/montlakeBridge.mdx
+++ b/src/app/content/seattle/built/montlakeBridge.mdx
@@ -31,7 +31,7 @@ With a new waterway, there was also a new problem - the city was now divided in 
 
 <LOCItem image="/loc/seattle/montlakeBridge/doubleLeaf.png" linkOut="https://www.loc.gov/resource/hhh.wa0441.sheet/?sp=1&st=image" caption="" alt=""/>
 <ComicSection rowHeight="3rem" elements={[
-    {type:'text', position:{col:1, row:1}, size:{width:3, height:1}, style:{outline:"box", fontSize:"1rem", backgroundColor:"white"}, src:"It is also a bascule bridge, which is French for balance - to save energy, the weight of the road-half is perfect balanced on the other side with a counterweight."},]}/>
+    {type:'text', position:{col:1, row:1}, size:{width:3, height:1}, style:{outline:"box", fontSize:"1rem", backgroundColor:"white"}, src:"It is also a bascule bridge, which is French for balance - to save energy, the weight of the road-half is perfectly balanced on the other side with a counterweight."},]}/>
 
 <LOCItem image="/loc/seattle/montlakeBridge/bascule.png" linkOut="https://www.loc.gov/resource/hhh.wa0441.sheet/?sp=3&st=image" caption="" alt=""/>
 
@@ -44,7 +44,7 @@ They were inspired by similar bridges in Chicago, designed to cross the Chicago 
 
 <LOCItem image="/loc/seattle/montlakeBridge/chicagoBridge.png" linkOut="https://www.loc.gov/resource/stereo.1s12313/" caption="Michigan Avenue Bridge over Chicago River" alt="stereograph of bridge opening up for a boat to pass under"/>
 
-The first bascule bridge that was completed was the Fremont Bridge in 1917, and an article about it was published in Engineering News-Record. Folks at the Strauss Bascule Bridge Company, the firm that had created the trunnion bascule bridge design, saw the article, and in 1920, they sued the city of Seattle for $348,000.
+The first bascule bridge completed was the Fremont Bridge in 1917, and an article about it was published in Engineering News-Record. Folks at the Strauss Bascule Bridge Company, the firm that had created the trunnion bascule bridge design, saw the article, and in 1920, they sued the city of Seattle for $348,000.
 
 The Montlake Bridge was vastly delayed, being the last of the four bridges to be constructed, as the city revised its plans to avoid further litigation. 
 
