--- a/src/app/content/seattle/built/montlakeBridge.mdx
+++ b/src/app/content/seattle/built/montlakeBridge.mdx
@@ -56,7 +56,7 @@ The Montlake Bridge was vastly delayed, being the last of the four bridges to be
 
 Thus, of all the bascule bridges in the entire city of Seattle, the Montlake Bridge is unique in that the trunnions, the pivot points on which the roads of the bridge turn, sit on top of concrete blocks instead of on steel cross girders. This change was meant to make the bridge different enough from the Strauss design that Strauss wouldn't sue again (they did anyway, in 1925, though they were unable to stop construction).
 
-If you want to learn more about the bridge's history and how it works, you can read the full engineering report here, which states: “Only in America could football become a justification for building a bridge.”
+If you want to learn more about the bridge's history and how it works, you can read the full engineering report below, which states: “Only in America could football become a justification for building a bridge.”
 
 <BigLink link="https://tile.loc.gov/storage-services/master/pnp/habshaer/wa/wa0400/wa0441/data/wa0441data.pdf" thumbnail="/placeholderThumbnail.png" title="Montlake Bridge HAER Report"/>
 
