edits to cunningham hall

--- a/src/app/content/seattle/architects/cunninghamHall.mdx
+++ b/src/app/content/seattle/architects/cunninghamHall.mdx
@@ -5,17 +5,17 @@ address: 4101 George Washington Lane Northeast
 location: ["Seattle"] 
 latlon: [47.65724328614031, -122.31104686037378]
 neighborhood: "University District"
-zoom: 15
+zoom: 16
 tags: ["architects", "built"]
 cameraImage: "/loc/seattle/cunninghamHall/cunninghamHallMap.png"
 cardImage: "/loc/seattle/cunninghamHall/cunninghamHallMap.png"
 stampName: "/seattle-general-2.svg"
 photoPrompt: "Try walking the path that Cunningham Hall took and imagine what it was like! Are there places that would be hard to move a building?"
 blurb: "In 2009, Cunningham Hall was moved .3 miles to a new location. At 100 years old, it's one of only a few buildings still around from the Alaksa-Yukon-Pacific exposition."
-stickers: [{image: "/loc/seattle/cunninghamHall/aypStamp.png", linkOut: "https://www.loc.gov/resource/g4284s.ct011997/?r=0.059,0.604,0.155,0.105,0", title: "Stamp from the authorized birds eye view of the Alaska-Yukon-Pacific Exposition."},{image: "/loc/seattle/cunninghamHall/aypBanner.png", linkOut: "https://www.loc.gov/resource/g4284s.ct011997/?r=0.778,0.593,0.153,0.105,0"}, {image: "/loc/seattle/cunninghamHall/seattleUSA.png", linkOut: "https://www.loc.gov/resource/g4284s.ct011997/?r=0.303,0.534,0.38,0.26,0"}]
+stickers: [{image: "/loc/seattle/cunninghamHall/aypStamp.png",title: "Exposition Logo of the Alaska-Yukon-Pacific.", linkOut: "https://www.loc.gov/resource/g4284s.ct011997/?r=0.059,0.604,0.155,0.105,0"},{image: "/loc/seattle/cunninghamHall/aypBanner.png", linkOut: "https://www.loc.gov/resource/g4284s.ct011997/?r=0.778,0.593,0.153,0.105,0"}, {image: "/loc/seattle/cunninghamHall/seattleUSA.png", linkOut: "https://www.loc.gov/resource/g4284s.ct011997/?r=0.303,0.534,0.38,0.26,0"},{image: "/loc/seattle/cunninghamHall/hallSticker.png"}]
 ---
 
-Creating a building is a lot of work! Some projects get delayed years at the beginning, just choosing the perfect spot for the structure. 
+Creating a building is a lot of work**! **Some projects get delayed years at the beginning, just choosing the perfect spot for the structure. 
 
 <ComicSection cols={6} rowHeight="3rem" elements={[
     {type:"image", src:"/loc/seattle/cunninghamHall/moving.png", position:{col:1, row:4}, size:{width:6, height:6}},
