--- a/src/app/content/seattle/architects/mcAdoo.mdx
+++ b/src/app/content/seattle/architects/mcAdoo.mdx
@@ -7,12 +7,12 @@ latlon: [47.63648485633318, -122.3579361288359]
 neighborhood: Queen Anne
 zoom: 15
 tags: ["architects"]
-cameraImage: "/placeholderThumbnail.png"
-cardImage: "/placeholderThumbnail.png"
+cameraImage: "/loc/seattle/mcAdoo/qa.png"
+cardImage: "/loc/seattle/mcAdoo/article.png"
 stampName:
-photoPrompt:
-blurb:
-stickers: [{}]
+photoPrompt: "The exterior of Queen Anne Pool was designed to match the neighboring middle schoole. Photograph details that stand out to you."
+blurb: "Part of 7 pools built at the same time in Seattle, the Queen Anne Pool was designed by an architect who's legacy helped shape numerous buildings in the city."
+stickers: [{image: "/loc/seattle/mcAdoo/joyner.jpg", title: "Advertisement for Dr. Joyner's clinic, which was designed by McAdoo", linkOut: "https://www.loc.gov/resource/sn87093377/1950-04-12/ed-1/?sp=8&q=robert+joyner&r=-0.004,0.767,0.458,0.318,0"},{image: "/loc/seattle/mcAdoo/qa.png", title: "View North from Queen Anne Water Tower, 1906. University of Washington Libraries, Special Collections, Warner 203. From the HAER report", linkOut: "https://tile.loc.gov/storage-services/master/pnp/habshaer/wa/wa0700/wa0750/data/wa0750data.pdf"},{image: "/loc/seattle/mcAdoo/clinic.png"},{image: "/loc/seattle/mcAdoo/poolMap.png"}]
 ---
 
 In 1968, Seattle voters passed 7 of 12 propositions as a part of Forward Thrust, which aimed to improve Seattle to support the growth of population it expected. These initiatives helped create lots of things that are Seattle staples nowadays, including the Seattle Aquarium and the Kingdome, whose site now hosts the Seattle Seahawks and Seattle Sounders.
