--- a/src/app/content/seattle/architects/somervellAndThomas.mdx
+++ b/src/app/content/seattle/architects/somervellAndThomas.mdx
@@ -21,11 +21,11 @@ The first Seattle Carnegie library was actually the original Central Library. Es
 
 <ComicSection cols={5} rowHeight="3rem" elements={[
     {type:"image", src:"/loc/seattle/somervellAndThomas/line.png", position:{col:1, row:1}, size:{width:5, height:4}},
-    {type:"text", style:{outline:"bubble"}, src:"As you can imagine, this doesn't scale very well.",position:{col:1, row:6}, size:{width:3, height:3}},
+    {type:"text", style:{outline:"bubble"}, src:"As you can imagine, this doesn't scale very well.",position:{col:1, row:6}, size:{width:3, height:3}, bubbleStyle: {tailDegree: 50}},
     {type:"image", src:"/loc/seattle/somervellAndThomas/talking.png", position:{col:1, row:9}, size:{width:5, height:6}},
-    {type:"text", style:{outline:"bubble"}, src:"So we were the first library on the West Coast to open up our book stacks for people to just browse!",position:{col:3, row:13}, size:{width:3, height:3}},
+    {type:"text", style:{outline:"bubble"}, src:"So we were the first library on the West Coast to open up our book stacks for people to just browse!",position:{col:3, row:13}, size:{width:3, height:3}, bubbleStyle: {tailDegree: 250}},
     {type:"image", src:"/loc/seattle/somervellAndThomas/alarm.png", position:{col:4, row:16}, size:{width:3, height:5}},
-    {type:"text", style:{outline:"bubble"}, src:"Excuse me, Mr. Smith! How would you respond to the allegations that you were the one who set the library on fire and destroyed over 25,000 books??",position:{col:1, row:17}, size:{width:3, height:3}},
+    {type:"text", style:{outline:"bubble"}, src:"Excuse me, Mr. Smith! How would you respond to the allegations that you were the one who set the library on fire and destroyed over 25,000 books??",position:{col:1, row:17}, size:{width:3, height:3}, bubbleStyle: {tailDegree: 140}},
 ]}/> 
 
 At the beginning of 1901, a huge fire consumed the wooden Yesler Mansion that the library was operating out of. It left the library with nothing -- no books and no home.
@@ -39,11 +39,11 @@ Four days after the fire, news broke that Andrew Carnegie, who before had writte
 
 
 <ComicSection cols={7} overlap={100} rowHeight="2rem" elements={[
-    {type:"text", style:{outline:"bubble"}, src:"But this doesn't look anything like the current Seattle Public Library.",position:{col:1, row:1}, size:{width:3, height:3}},
+    {type:"text", style:{outline:"bubble"}, src:"But this doesn't look anything like the current Seattle Public Library.",position:{col:1, row:1}, size:{width:3, height:3}, bubbleStyle: {tailDegree: 10}},
     {type:"image", src:"/loc/seattle/somervellAndThomas/smith1.png", position:{col:4, row:1}, size:{width:2, height:2}},
-    {type:"text", style:{outline:"bubble"}, src:"Ours is more..",position:{col:6, row:2}, size:{width:2, height:2}},
+    {type:"text", style:{outline:"bubble"}, src:"Ours is more..",position:{col:6, row:2}, size:{width:2, height:2}, bubbleStyle: {tailDegree: 180}},
     {type:"image", src:"/loc/seattle/somervellAndThomas/smithTwo.png", position:{col:1, row:5}, size:{width:7, height:8}},
-    {type:"text", style:{outline:"bubble", fontSize: "1.3rem"}, src:"Geometric",position:{col:4, row:7}, size:{width:2, height:3}},
+    {type:"text", style:{outline:"bubble", fontSize: "1.3rem"}, src:"Geometric",position:{col:4, row:7}, size:{width:2, height:3}, bubbleStyle: {tailDegree: 0}},
     {type:"text", style:{outline:"box" , backgroundColor: "white", fontSize:"1rem"}, src:"Yeah, in 1998, Seattle voters voted in favor of the largest library bond initiative at the time, and funded almost $200 million in renovations for Seattle’s libraries. Of the eight Carnegie libraries built in Seattle, the Central Library is the only one that was demolished. The others, if not still operating as a library branch, are still standing.",position:{col:1, row:13}, size:{width:7, height:4}},
 ]}/> 
 
