adjust tugboat heights

--- a/src/app/content/seattle/built/tugboatFoss.mdx
+++ b/src/app/content/seattle/built/tugboatFoss.mdx
@@ -11,7 +11,7 @@ cameraImage: /loc/seattle/tugboatFoss/columbiaRiver.png
 cardImage: "/loc/seattle/tugboatFoss/columbiaRiver.png"
 stampName: "/seattle-general-2.svg"
 photoPrompt: "Visit the pier and see all the different kinds of boats there are."
-blurb: "VVN TODO"
+blurb: "The oldest wooden tugboat's seen and done it all! From dangerous rapids to starring in Hollywood!"
 stickers: [{image: "/loc/seattle/tugboatFoss/boat.png" }, {image: "/loc/seattle/tugboatFoss/fossEmblem.png", linkOut: "https://www.loc.gov/resource/hhh.wa0868.photos/?sp=1", title: "Foss Company motto on the side of the boat"}]
 ---
 
@@ -35,7 +35,7 @@ The (second) oldest fireboat:
 The *Arthur Foss* held many jobs. It started off in Astoria, Oregon, navigating the dangerous mouth of the Columbia River where it dumps into the Pacific Ocean. In the waters dubbed the “graveyard of the Pacific”, the Arthur Foss, then known as Wallowa, would act as an experienced guide and tow boats across the crossing.
 
 
-<LOCItem linkOut="https://www.loc.gov/resource/ppmsca.18165/" image="/loc/seattle/tugboatFoss/columbiaRiver.png" caption="The Columbia River"/>
+<LOCItem linkOut="https://www.loc.gov/resource/ppmsca.18165/" image="/loc/seattle/tugboatFoss/columbiaRiver.png" caption=""/>
 
 <ComicSection overlap={150} elements={[
     {type:"text", src:"You see that, kid? That's the Columbia River", position:{col: 2, row: 1}, size: {width:2, height: 1}, style:{outline: "bubble",}, bubbleStyle: {tailDegree: 60}},
@@ -51,8 +51,8 @@ In 1929, the Foss Launch & Tug Company bought Wallowa and renamed it Arthur Foss
 
 <ComicSection elements={[
     {type:"text", src:"You're gonna be a star, kid! Gimme your best movie star smile", position:{col: 1, row: 1}, size: {width:2, height: 1}, style:{outline: "bubble",}, },
-    {type:"image", src:"/loc/seattle/tugboatFoss/movie.png",position:{col: 1, row: 1}, size: {width:3, height: 3},},
-    {type:"text", src:"... Is that how you always smile?", position:{col: 3, row: 3}, size: {width:1, height: 1}, style:{outline: "bubble",}, },
+    {type:"image", src:"/loc/seattle/tugboatFoss/movie.png",position:{col: 1, row: 2}, size: {width:3, height: 4},},
+    {type:"text", src:"... Is that how you always smile?", position:{col: 3, row: 5}, size: {width:1, height: 1}, style:{outline: "bubble",}, },
 ]}/>
 
 Despite becoming an A-list celebrity, the Arthur Foss continued to work as a tugboat, and found itself it many dangerous situations. 
