--- a/src/app/content/seattle/architects/firestationNo18.mdx
+++ b/src/app/content/seattle/architects/firestationNo18.mdx
@@ -1,5 +1,5 @@
 ---
-title: VVN TODO need title
+title: How Two Cities Joined Together
 locationTitle: Fire Station No. 18
 address: 5427 Russell Avenue Northwest
 location: ["Seattle"] 
@@ -8,11 +8,11 @@ neighborhood: Ballard
 zoom: 15
 tags: ["built","architects"]
 cameraImage: "/loc/seattle/firestationNo18/firehorse.png"
-cardImage: "/loc/seattle/firestationNo18/station.png"
+cardImage: "/loc/seattle/firestationNo18/ballard.jpg"
 stampName:
-photoPrompt:
-blurb:
-stickers: []
+photoPrompt: "Visit the retired fire station in persion - what things still look like a fire station? What things definitely don't?"
+blurb: "Learn how the city of Ballard became a part of Seattle, and about one of the last remaining structures from historic Ballard, Fire Station No. 18."
+stickers: [{image: "/loc/seattle/firestationNo18/fireHorse.png", title: "Horse-drawn fire engine rushing to a fire", linkOut: "https://www.loc.gov/resource/cph.3a27542/"},{image: "/loc/seattle/firestationNo18/ballard.jpg", title: "Aerial view of the Ballard neighborhood north of downtown Seattle, Washington, along Elliott Bay" , linkOut: "https://www.loc.gov/resource/highsm.50268/"}, {image: "/loc/seattle/firestationNo18/ballard2.jpg", title: "Aerial view of Seattle, Washington, with a focus on the Hiram M. Chittenden Locks, or Ballard Locks, a complex of locks at the west end of Salmon Bay and the Lake Washington Ship Canal ", linkOut: "https://www.loc.gov/resource/highsm.51134/"}, {image: "/loc/seattle/firestationNo18/seaserpant.png", title: "Photo shows nine men standing with a very long driftwood sculpture of a sea serpent on a beach in the Ballard area of Seattle, Washington." , linkOut: "https://www.loc.gov/resource/cph.3b12369/"}, {image: "/loc/seattle/firestationNo18/concernHorse.png"},]
 ---
 
 Ballard wasn’t always part of Seattle - in its early days, it was an independent town.
@@ -40,13 +40,16 @@ At times, extra support was needed to handle some fires. In 1958, the Seattle Ce
 <ComicSection cols={5} elements={[
     {type:"text", style:{outline:"bubble"}, src:"Those stacks of wood are over 50 feet high!", position:{col:2, row:1}, size:{width:2, height:1}},
     {type:"text", style:{outline:"bubble"}, src:"It’d be really bad if a fire started here... all of the wood is so.... flammable.", position:{col:3, row:2}, size:{width:3, height:1}},
-     {type:"image", src:"/loc/seattle/firestationNo18/mill.png", position:{col:1, row:2}, size:{width:5, height:5}},
-     {type:"image", src:"/loc/seattle/firestationNo18/concernHorse.png", position:{col:4, row:4}, size:{width:2, height:2}},
+    {type:"image", src:"/loc/seattle/firestationNo18/mill.png", position:{col:1, row:2}, size:{width:5, height:5}},
+    {type:"image", src:"/loc/seattle/firestationNo18/concernHorse.png", position:{col:4, row:4}, size:{width:2, height:2}},
     {type:"text", style:{outline:"bubble"}, src:"It probably would take at least 3 days to put out...", position:{col:1, row:5}, size:{width:2, height:1}},
     {type:"text", style:{outline:"bubble"}, src:"And require a fireboat....", position:{col:3, row:6}, size:{width:1, height:1}},
+    {type: 'text', style:{outline: "box"}, src:"Unfortunately, the mill did catch on fire. The dried wood was ready fuel, and it was the largest fire Seattle had seen since the Great Fire of 1889.", position: {col: 1, row:7}, size: {width:5, height:1}}
 ]}/>
 
-Luckily, Seattle had the Fireboat Duwamish as part of its firefighting fleet. It arrived on site from its home at Fire Station 5, located north of Colman Dock in downtown, and fought the fire from the canal.
+The fire was so large that it burned for three days straight. The city had engines reporting from seven different stations around the city to come and help, and because the mill was so close to the canal, the city's fireboat was also engaged.
+
+The Fireboat Duwamish is part of Seattle's firefighting fleet, and arrives when fires pop up near or on the water. For the Ballard lumber mill fire, it arrived on site from its home at Fire Station 5, located north of Colman Dock in downtown, and fought the fire from the canal.
 
 <LOCItem image="/loc/seattle/firestationNo18/fireboat.png" linkout="https://www.loc.gov/resource/hhh.wa0746.photos/?sp=1" caption="The Fireboat Duwamish is the 'best preserved' example of an early twentieth centure fireboat. It can be seen docked at the Historic Ships Wharf in Lake Union Park." alt=""/>
 
