--- a/src/app/content/seattle/names/joseprizal.mdx
+++ b/src/app/content/seattle/names/joseprizal.mdx
@@ -3,7 +3,7 @@ title: The Most Beautiful View of Seattle
 locationTitle: Jose P Rizal Bridge
 location: ["Seattle"]
 latlon: [47.595096, -122.317290]
-zoom: 12
+zoom: 16
 tags: ["names"]
 address:
 neighborhood: Beacon Hill
@@ -38,14 +38,14 @@ efforts of Seattle Filipino Americans Trinidad Rojo and Vic Bacho.
 
 <ComicSection cols={8} rowHeight="3rem" elements={[
   {type:"image",src:"/loc/seattle/joseprizal/vicAndTrinidad.png", position:{col:1, row:3}, size:{width: 4, height:2}},
-  {type:"text", src:"Vic, you know who is a real hero?", position:{col:1, row:1}, size:{width:3, height:2}, style:{outline:"bubble"}},
-  {type:"text", src:"Who, Trinidad?", position:{col:4, row:2}, size:{width:2, height:1}, style:{outline:"bubble"}},
-  {type:"text", src:"*Dr. Jose P. Rizal!* We should name something in Washington after him", position:{col:5, row:3}, size:{width:4, height:2}, style:{outline:"bubble"}},
-  {type:"text", src:"100% agree. What do you think, something like a street?", position:{col:4, row:5}, size:{width:4, height:2}, style:{outline:"bubble"}},
-  {type:"text", src:"That's too small... we need something **BIG**. Something like...", position:{col:2, row:7}, size:{width:4, height:2}, style:{outline:"bubble"}},
+  {type:"text", src:"Vic, you know who is a real hero?", position:{col:1, row:1}, size:{width:3, height:2}, style:{outline:"bubble"}, bubbleStyle: {tailDegree: 100}},
+  {type:"text", src:"Who, Trinidad?", position:{col:4, row:2}, size:{width:2, height:1}, style:{outline:"bubble"}, bubbleStyle: {tailDegree: 130}},
+  {type:"text", src:"*Dr. Jose P. Rizal!* We should name something in Washington after him", position:{col:5, row:3}, size:{width:4, height:2}, style:{outline:"bubble"}, bubbleStyle: {tailDegree: 175}},
+  {type:"text", src:"100% agree. What do you think, something like a street?", position:{col:4, row:5}, size:{width:4, height:2}, style:{outline:"bubble"}, bubbleStyle: {tailDegree: 220}},
+  {type:"text", src:"That's too small... we need something **BIG**. Something like...", position:{col:2, row:7}, size:{width:4, height:2}, style:{outline:"bubble"}, bubbleStyle: {tailDegree: 230}},
   {type:"text", src:"Mount St Helens!", position:{col:2, row:9}, size:{width:6, height:2}, style:{outline:"bubble", fontSize:"2rem"}},
   {type:"image", src:"/loc/seattle/joseprizal/mayor.png", position:{col:7 , row:12}, size:{width:2, height:4}},
-  {type:"text", src:"**Hey!** Hey, what about a bridge and a park?", position:{col:3, row:12}, size:{width:3, height:2}, style:{outline:"bubble"}},
+  {type:"text", src:"**Hey!** Hey, what about a bridge and a park?", position:{col:3, row:12}, size:{width:3, height:2}, style:{outline:"bubble"}, bubbleStyle: {tailDegree: 10}},
 ]}/>
 
 <LOCItem linkOut="https://www.loc.gov/resource/sn88085780/1961-06-16/ed-1/?sp=1" image="/loc/joseprizal.jpg" caption="Page from the Filipino Forum, a newspaper for Seattle's Filipino community"  />
