--- a/src/app/content/seattle/architects/mcAdoo.mdx
+++ b/src/app/content/seattle/architects/mcAdoo.mdx
@@ -15,7 +15,7 @@ blurb:
 stickers: [{}]
 ---
 
-In 1968, Seattle voters passed 7 of 12 propositions as a part of Forward Thrust, which aimed to improve Seattle to support the growth of population it expected. These initiatives helped create lots of things that are Seattle staples nowadays, including the Seattle Aquarium and the Kingdome, whose site now hosts the Seattle Seahawks and Seattle Sounders.
+In 1968, Seattle voters passed 7 of 12 propositions as a part of Forward Thrust, which aimed to improve Seattle to support the expected population growth. These initiatives helped create lots of things that are Seattle staples nowadays, including the Seattle Aquarium and the Kingdome, whose site now hosts the Seattle Seahawks and Seattle Sounders.
 
 <ComicSection elements={[
     {type:"text",position:{col:1, row:1}, size:{width:7, height:2}, style:{outline:"box" , backgroundColor: "white", fontSize:"1rem"}, src:"It also passed $118 million in funding for parks and recreation in King County, which included the construction of seven new pools for Seattle:"},
